trunk/Archive2/02/172d3114efc7be/output
main.cpp: In function 'int main()':
main.cpp:25:12: error: cannot convert 'main()::__lambda0' to 'void (*)(void*)' in assignment
     create = [str](void *mem) { create_Foo(mem, str); };
            ^
